# cmake-gtest-coverage-example

./: CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  simple_vendor_test.cpp  stream_vendorio_test.cpp
tests/googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
